test/libhyperion/syntaxTests/nameAndTypeResolution/505_builtin_depositroot_reject_value.hyp
contract C {
    function f() public {
        depositroot.value();
    }
}
// ----
// TypeError 8820: (47-64): Member "value" is only available for payable functions.
